--- a/public/login.html
+++ b/public/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="/public/styles/project.css">
     
 
 </head>
@@ -42,6 +42,8 @@
                 <input style="margin-right:180px;" type="submit" value="submit">
 
             </form>
+            <button id="users-btn">Get Users</button>
+            <ul id="allUsers"></ul>
         </div>
     </div>
 
